lib_LTLIBRARIES = libtoms715.la

AM_FFLAGS = -ff2c
if LIB32
AM_FFLAGS += -m32
endif

libtoms715_la_LDFLAGS = $(FLIBS_OPTS)
libtoms715_la_LIBADD = $(FLIBS)

libtoms715_la_SOURCES = \
anorm.f \
besei0.f \
besei1.f \
besek0.f \
besek1.f \
besi0.f \
besi1.f \
besj0.f \
besj1.f \
besk0.f \
besk1.f \
besy0.f \
besy1.f \
calcei.f \
calci0.f \
calci1.f \
calck0.f \
calck1.f \
calerf.f \
caljy0.f \
caljy1.f \
daw.f \
derf.f \
derfc.f \
derfcx.f \
dgamma.f \
dlgama.f \
dsubn.f \
ei.f \
eone.f \
expei.f \
machar.f \
psi.f \
ribesl.f \
rjbesl.f \
rkbesl.f \
rybesl.f